--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 *.cc linguist-detectable=false
+*.cpp linguist-detectable=false
+*.cxx linguist-detectable=false
+*.cmake linguist-detectable=false
+*.h linguist-detectable=false
+*.c linguist-detectable=false
+*.html linguist-detectable=false
