--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 *.cpp linguist-detectable=false
 *.cxx linguist-detectable=false
 *.cmake linguist-detectable=false
+CMake* linguist-detectable=false
 *.h linguist-detectable=false
 *.c linguist-detectable=false
 *.html linguist-detectable=false
